1. Optional is removed from the index finder. 2. The basic test to verify the presence of the issue was added.